# Snaze

./: CMakeLists.txt  README.md
data/: 4levels.dat.txt
include/: jararaca.h  jiripoca.h  list.h  maze.h  maze.inl  snakegame.h
src/: main.cpp  maze.cpp  snakegame.cpp
